processed/gerrit/txt_full/33133.txt
Change:     33133
Subject:    LU-10055 mdt: use max_mdsize in reply for layout intent
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/33133
Change-Id:  Iaac5dcb8b4c5aa2c050dddb5b3fb2662c59f133b
Project:    fs/lustre-release
Branch:     b2_10
Status:     MERGED
Owner:      Minh Diep
Created:    2018-09-10 19:16:17.000000000
Updated:    2019-01-16 07:30:42.000000000
Patch Set:  4
Insertions: +31
Deletions:  -9
Comments:   0 (0 unresolved)
Topic:      LTS

--- Labels ---
  Code-Review: Andreas Dilger: +2; Mikhail Pershin: +1
  Verified: Jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Jinshan Xiong, Oleg Drokin, Andreas Dilger, Mikhail Pershin, Minh Diep

--- Commit Message ---
LU-10055 mdt: use max_mdsize in reply for layout intent

The LAYOUT intent reply LVB buffer size is set to a current
file layout, meanwhile it is not working when layout is changed
and the mdt_max_mdsize is better to use as size of reply buffer.
This buffer will be shrinked to the new layout size after all.

Without that change the new layout size may be bigger and layout
is not returned back, causing extra RPC from client.
The mdt_lvbo_fill() is changed also to update mdt_max_mdsize if
larger layout is found. The related message level is decreased
from D_ERROR to D_INFO.

Lustre-change: https://review.whamcloud.com/30004
Lustre-commit: 4f27911cadf10d0b2fd6451569e688233eaf50d1

Signed-off-by: Mikhal Pershin <mike.pershin@intel.com>
Change-Id: Iaac5dcb8b4c5aa2c050dddb5b3fb2662c59f133b
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Signed-off-by: Minh Diep <mdiep@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/33133
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Mike Pershin <mpershin@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>

--- Review History ---

--- Message (Minh Diep, 2018-09-10 19:16:17.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2018-09-10 19:17:07.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-10 19:24:20.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/smt/git/lustre-release/lustre/mdt/mdt_handler.c: In function ‘mdt_intent_layout’:
 /home/green/smt/git/lustre-release/lustre/mdt/mdt_handler.c:3640:13: error: request for member ‘mlc_opc’ in something not a structure or union
    if (layout.mlc_opc == MD_LAYOUT_WRITE) {
              ^
 /home/green/smt/git/lustre-release/lustre/mdt/mdt_handler.c:3640:25: error: ‘MD_LAYOUT_WRITE’ undeclared (first use in this function)
    if (layout.mlc_opc == MD_LAYOUT_WRITE) {
                          ^
 /home/green/smt/git/lustre-release/lustre/mdt/mdt_handler.c:3640:25: note: each undeclared identifier is reported only once for each function it appears in

--- Message (Jenkins, 2018-09-10 19:35:31.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/568/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/58531/ : FAILURE

--- Message (Minh Diep, 2018-09-10 20:58:20.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2018-09-10 21:02:35.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-10 21:06:20.000000000) ---
Patch Set 2:

Cannot build patch due to 14, messages:

  /home/green/smt/git/lustre-release/lustre/mdt/mdt_handler.c: In function ‘mdt_intent_layout’:
 /home/green/smt/git/lustre-release/lustre/mdt/mdt_handler.c:3640:13: error: request for member ‘mlc_opc’ in something not a structure or union
    if (layout.mlc_opc == MD_LAYOUT_WRITE) {
              ^
 /home/green/smt/git/lustre-release/lustre/mdt/mdt_handler.c:3640:25: error: ‘MD_LAYOUT_WRITE’ undeclared (first use in this function)
    if (layout.mlc_opc == MD_LAYOUT_WRITE) {
                          ^
 /home/green/smt/git/lustre-release/lustre/mdt/mdt_handler.c:3640:25: note: each undeclared identifier is reported only once for each function it appears in

--- Message (Jenkins, 2018-09-10 21:16:10.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/570/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/58533/ : FAILURE

--- Message (Minh Diep, 2018-09-10 23:53:42.000000000) ---
Uploaded patch set 3.

--- Message (wc-checkpatch, 2018-09-10 23:57:58.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-11 00:00:03.000000000) ---
Patch Set 3:

Code-wise looks good to me.

--- Message (Jenkins, 2018-09-11 00:15:22.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/571/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/58534/ : SUCCESS

--- Message (Autotest, 2018-09-11 00:15:25.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-ldiskfs session.

--- Message (Autotest, 2018-09-11 00:15:26.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-zfs-part-1 session.

--- Message (Autotest, 2018-09-11 00:15:26.000000000) ---
Patch Set 3:

Trevis Autotest started optional review-dne-zfs-part-3 session.

--- Message (Autotest, 2018-09-11 00:15:26.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-zfs-part-2 session.

--- Message (Autotest, 2018-09-11 00:15:27.000000000) ---
Patch Set 3:

Trevis Autotest started optional review-dne-zfs-part-4 session.

--- Message (Autotest, 2018-09-11 00:15:27.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-part-2 session.

--- Message (Autotest, 2018-09-11 00:15:27.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-part-4 session.

--- Message (Autotest, 2018-09-11 00:15:27.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-zfs session.

--- Message (Autotest, 2018-09-11 00:15:28.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-part-1 session.

--- Message (Autotest, 2018-09-11 00:15:31.000000000) ---
Patch Set 3:

Trevis Autotest started enforced review-dne-part-3 session.

--- Message (Maloo, 2018-09-11 02:32:14.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-5vm9 for review-ldiskfs received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/1b0f8ee1-e6a1-4585-b2a3-ad82fb231d8f). Ran 5 tests. No failures.

--- Message (Maloo, 2018-09-11 04:44:21.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-7vm6 for review-dne-zfs-part-4 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/ca805277-dcf6-4cfe-a8f6-a21b4476ebad). Ran 10 tests.  1 tests failed: replay-single. %% THIS TEST SESSION CRASHED %%

--- Message (Maloo, 2018-09-11 05:20:19.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-8vm6 for review-dne-part-4 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/687053e5-13ab-4b77-8e1a-a56e06a9ca31). Ran 8 tests. No failures.

--- Message (Maloo, 2018-09-11 05:26:19.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-6vm6 for review-dne-zfs-part-2 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/44e244ae-0b82-4589-b72c-0490b09758f2). Ran 10 tests. No failures.

--- Message (Maloo, 2018-09-11 05:26:24.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-9vm1 for review-dne-part-1 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/ee852eef-6ed3-463f-a7d7-1d37391f822d). Ran 6 tests. No failures.

--- Message (Maloo, 2018-09-11 05:40:22.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-8vm1 for review-dne-part-2 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/251d51c5-1513-4f3b-95ae-f9289c2229f1). Ran 10 tests. No failures.

--- Message (Maloo, 2018-09-11 05:52:25.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-6vm1 for review-dne-zfs-part-1 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/e8bb4679-23eb-4768-b5af-2882122191e3). Ran 6 tests. No failures.

--- Message (Maloo, 2018-09-11 06:04:26.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-11vm9 for review-zfs received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/ea8f1086-276a-4f05-8b92-c4931788bd1b). Ran 7 tests. No failures.

--- Message (Maloo, 2018-09-11 06:14:22.000000000) ---
Patch Set 3:

Tests uploaded by Trevis Autotest from trevis-7vm1 for review-dne-zfs-part-3 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/c54f57b2-105a-4a56-8188-452108d488df). Ran 3 tests. No failures.

--- Message (Maloo, 2018-09-11 06:34:23.000000000) ---
Patch Set 3: Verified+1

Tests uploaded by Trevis Autotest from trevis-9vm6 for review-dne-part-3 received by maloo, run on CentOS 7.0/x86_64: (https://testing.whamcloud.com/test_sessions/62289bae-405d-4024-bcfb-e4fd00f7792b). Ran 3 tests. No failures.

--- Message (Mikhail Pershin, 2018-09-21 08:58:29.000000000) ---
Patch Set 3: Code-Review+1

--- Message (Minh Diep, 2018-10-10 15:00:20.000000000) ---
Patch Set 3:

Jinshan, could you review this patch?

--- Message (Andreas Dilger, 2018-12-07 17:08:32.000000000) ---
Patch Set 3: Code-Review+2

--- Message (Andreas Dilger, 2019-01-11 18:20:22.000000000) ---
Topic set to LTS

--- Message (unknown, 2019-01-16 07:30:42.000000000) ---
Change has been successfully cherry-picked as 9c57139f261292bbd20e5f304beba4e209a54a40 by Oleg Drokin
